--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Hello!</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
-        <h1>Hello!</h1>
+        <!-- :introduction -->
+        <div class="h-screen flex justify-center">
+            <div class="flex items-center justify-center flex-col w-2/3 h-full">
+                <h1 class="text-5xl font-semibold">Johnathan</h1>
+                <p class="text-center">Welcome! Here you can view what I've done in my life.</p>
+            </div>
+        </div>
+        <!-- :about -->
+        <div class="h-screen flex justify-center">
+            <div class="flex items-center justify-center flex-col w-2/3 h-full">
+                <h1 class="text-5xl font-semibold">About me</h1>
+            </div>
+        </div>
+        <!-- :skills -->
+        <div class="h-screen flex justify-center">
+            <div class="flex items-center justify-center flex-col w-2/3 h-full">
+                <h1 class="text-5xl font-semibold">Skills</h1>
+            </div>
+        </div>
+        <!-- :projects -->
+        <div class="h-screen flex justify-center">
+            <div class="flex items-center justify-center flex-col w-2/3 h-full">
+                <h1 class="text-5xl font-semibold">Projects</h1>
+            </div>
+        </div>
     </body>
 </html>
