--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Hello!</title>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <script src="https://cdn.tailwindcss.com"></script>
-        <script src="index.js" defer></script>
+        <script src="index.js" type="module" defer></script>
     </head>
     <body class="text-white">
         <!-- :introduction -->
