I was born... 10 thousands years ago...

--- a/index.html
+++ b/index.html
@@ -11,13 +11,24 @@
         <div class="bg-[#888] h-screen flex justify-center">
             <div class="flex items-center justify-center flex-col w-2/3 h-full">
                 <h1 class="text-5xl font-semibold">Johnathan</h1>
-                <p class="text-center">Welcome! Here you can view what I've done in my life.</p>
+                <p class="text-center text-xl">
+                    Welcome! Here you can view what I've done in my life.
+                </p>
             </div>
         </div>
         <!-- :about -->
         <div class="bg-[#a88] h-screen flex justify-center">
             <div class="flex items-center justify-center flex-col w-2/3 h-full">
                 <h1 class="text-5xl font-semibold">About me</h1>
+                <p id="about-me-text" class="text-center text-xl">
+                    I'm %age% years old, I love music, chess, violin, coding, learning,
+                    philosoph, drawing, singing, playing games, watching stuff, etc.
+                    <br>
+                    I've been a hobbyist programmer since 2020, unfortunately I'm
+                    not too good at finishing projects, but I'm working on that...
+                    <br>
+                    And not good with humans interactions, working on that too...
+                </p>
             </div>
         </div>
         <!-- :skills -->
