So simple, so much simpler...

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
             <div class="flex items-center justify-center flex-col w-2/3 h-full">
                 <h1 class="text-5xl font-semibold">About me</h1>
                 <p id="about-me-text" class="text-center text-xl">
-                    I'm %age% years old, I love music, chess, violin, coding, learning,
-                    philosoph, drawing, singing, playing games, watching stuff, etc.
+                    I'm <span id="age">??</span> years old, I love music, chess, violin,
+                    coding, learning, philosoph, drawing, singing, playing games, watching
+                    stuff, etc.
                     <br>
                     I've been a hobbyist programmer since 2020, unfortunately I'm
                     not too good at finishing projects, but I'm working on that...
