Let's navegate like pirates using links!

--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     </head>
     <body class="text-white">
         <!-- :introduction -->
-        <div class="bg-[#888] h-screen flex justify-center">
-            <div class="flex items-center justify-center flex-col w-2/3 h-full">
+        <div class="bg-[#888] h-screen flex items-center justify-center">
+            <div class="flex items-center justify-center flex-col relative w-2/3 h-2/3">
                 <h1 class="text-5xl font-semibold">Johnathan</h1>
                 <p class="text-center text-xl">
                     Welcome! Here you can view what I've done in my life.
                 </p>
+                <div class="absolute bottom-0">
+                    <a class="text-blue-100" href="https://github.com/nathan2801">github</a>
+                    <span>||</span>
+                    <a class="text-blue-100" href="https://www.linkedin.com/in/johnathan-oliveira-241b552a6">linkedin</a>
+                </div>
             </div>
         </div>
         <!-- :about -->
