Tweaks for sleeps

--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
     </head>
     <body class="text-white">
         <!-- :introduction -->
-        <div class="bg-[#888] h-screen flex items-center justify-center">
-            <div class="flex items-center justify-center flex-col relative w-2/3 h-2/3">
-                <h1 class="text-5xl font-semibold">Johnathan</h1>
+        <div class="bg-[#a88] h-screen flex items-center justify-center">
+            <div class="flex items-center justify-center flex-col relative max-w-lg w-2/3 h-2/3">
+                <h1 class="text-5xl font-semibold mb-2">Johnathan</h1>
                 <p class="text-center text-xl">
                     Welcome! Here you can view what I've done in my life.
                 </p>
                 <div class="absolute bottom-0">
-                    <a class="text-blue-100" href="https://github.com/nathan2801">github</a>
+                    <a class="text-red-100" href="https://github.com/nathan2801">github</a>
                     <span>||</span>
-                    <a class="text-blue-100" href="https://www.linkedin.com/in/johnathan-oliveira-241b552a6">linkedin</a>
+                    <a class="text-red-100" href="https://www.linkedin.com/in/johnathan-oliveira-241b552a6">linkedin</a>
                 </div>
             </div>
         </div>
         <!-- :about -->
-        <div class="bg-[#a88] h-screen flex justify-center">
-            <div class="flex items-center justify-center flex-col w-2/3 h-full">
-                <h1 class="text-5xl font-semibold">About me</h1>
+        <div class="bg-[#8a8] h-screen flex items-center justify-center">
+            <div class="flex items-center justify-center flex-col max-w-lg w-2/3 h-2/3">
+                <h1 class="text-5xl font-semibold mb-2">About me</h1>
                 <p id="about-me-text" class="text-center text-xl">
                     I'm <span id="age">??</span> years old, I love music, chess, violin,
                     coding, learning, philosoph, drawing, singing, playing games, watching
@@ -38,9 +38,9 @@
             </div>
         </div>
         <!-- :projects -->
-        <div class="bg-[#88a] h-screen flex justify-center">
-            <div class="flex items-center justify-center flex-col w-2/3 h-full">
-                <h1 class="text-5xl font-semibold">Projects</h1>
+        <div class="bg-[#88a] h-screen flex items-center justify-center">
+            <div class="flex items-center justify-center flex-col max-x-lg w-2/3 h-2/3">
+                <h1 class="text-5xl font-semibold mb-2">Projects</h1>
             </div>
         </div>
     </body>
