--- a/index.html
+++ b/index.html
@@ -23,18 +23,22 @@
         </div>
         <!-- :about -->
         <div class="bg-[#8a8] h-screen flex items-center justify-center">
-            <div class="flex items-center justify-center flex-col max-w-lg w-2/3 h-2/3">
-                <h1 class="text-5xl font-semibold mb-2">About me</h1>
-                <p id="about-me-text" class="text-center text-xl">
-                    I'm <span id="age">??</span> years old, I love music, chess, violin,
-                    coding, learning, philosoph, drawing, singing, playing games, watching
-                    stuff, etc.
-                    <br>
-                    I've been a hobbyist programmer since 2020, unfortunately I'm
-                    not too good at finishing projects, but I'm working on that...
-                    <br>
-                    And not good with humans interactions, working on that too...
-                </p>
+            <div class="flex items-center justify-center max-w-lg w-2/3 h-2/3">
+                <div>
+                    <h1 class="text-5xl font-semibold mb-2">About me</h1>
+                    <p class="text-xl text-justify">
+                        I'm <span id="age">??</span> years old, I love music, chess, violin,
+                        coding, learning, philosoph, drawing, singing, playing games, watching
+                        stuff, etc.
+                    </p>
+                    <p class="text-xl text-justify">
+                        I've been a hobbyist programmer since 2020, unfortunately I'm
+                        not too good at finishing projects, but I'm working on that...
+                    </p>
+                    <p class="text-xl text-justify">
+                        And not good with humans interactions, working on that too...
+                    </p>
+                </div>
             </div>
         </div>
         <!-- :projects -->
