--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body class="text-white">
         <!-- :introduction -->
-        <div class="bg-[#a88] h-screen flex items-center justify-center">
+        <div class="bg-rose-600 h-screen flex items-center justify-center">
             <div class="flex items-center justify-center flex-col relative max-w-lg w-2/3 h-2/3">
                 <h1 class="text-5xl font-semibold mb-2">Johnathan</h1>
                 <p class="text-center text-xl">
@@ -22,7 +22,7 @@
             </div>
         </div>
         <!-- :about -->
-        <div class="bg-[#8a8] h-screen flex items-center justify-center">
+        <div class="bg-teal-600 h-screen flex items-center justify-center">
             <div class="flex items-center justify-center max-w-lg w-2/3 h-2/3">
                 <div>
                     <h1 class="text-5xl font-semibold mb-2">About me</h1>
@@ -42,7 +42,7 @@
             </div>
         </div>
         <!-- :projects -->
-        <div class="bg-indigo-400 h-screen flex items-center justify-center">
+        <div class="bg-indigo-500 h-screen flex items-center justify-center">
             <div class="flex items-center justify-center flex-col max-x-lg w-2/3 h-2/3">
                 <h1 class="text-5xl font-semibold mb-2 mb-4">Projects</h1>
                 <div id="project-gallery"
